--- a/res/layout/activity_teacheredit.xml
+++ b/res/layout/activity_teacheredit.xml
@@ -30,6 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClick"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:text="添加" />
 
 </LinearLayout>
