--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="欢迎使用智能手术刀系统"
+        android:text="欢迎使用智能手术刀执刀训练教学指导系统"
         android:textColor="#FF00A0"
         android:textSize="30sp"
         android:layout_gravity="center"
