--- a/res/layout/activity_teachercheck.xml
+++ b/res/layout/activity_teachercheck.xml
@@ -23,6 +23,8 @@
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:onClick="onClick"
         android:text="返回" />
 
