--- a/res/layout/activity_teachermenu.xml
+++ b/res/layout/activity_teachermenu.xml
@@ -24,7 +24,7 @@
         android:layout_height="300dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="发布作业"
+        android:text="查看作业"
         android:background="#FEEEED"
         android:onClick="onClick"/>
 </LinearLayout>
