fix some function

--- a/res/layout/myworkspace_item_practice.xml
+++ b/res/layout/myworkspace_item_practice.xml
@@ -25,6 +25,16 @@
         android:textSize="25sp" />
 
     <TextView
+        android:id="@+id/textview_mark_vetical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="10"
+        android:background="#00AAFF"
+        android:gravity="center_vertical"
+        android:textSize="25sp" />
+
+    <TextView
         android:id="@+id/textview_mark_angle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -46,6 +56,16 @@
 
     <TextView
         android:id="@+id/textview_mark_length"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="10"
+        android:background="#00AAFF"
+        android:gravity="center_vertical"
+        android:textSize="25sp" />
+    
+    <TextView
+        android:id="@+id/textview_mark_time"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -82,6 +102,7 @@
             android:gravity="center"
             android:onClick="onClick"
             android:text="截图" />
+
         <Button
             android:id="@+id/button_back"
             android:layout_width="0dp"
