--- a/res/layout/activity_teachereditupdate.xml
+++ b/res/layout/activity_teachereditupdate.xml
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="压力:" />
+            android:text="行刀力量:" />
 
         <EditText
             android:id="@+id/edittext_force"
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="线长:" />
+            android:text="行刀距离:" />
 
         <EditText
             android:id="@+id/edittext_length"
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="时间:" />
+            android:text="行刀时间:" />
 
         <EditText
             android:id="@+id/edittext_time"
