--- a/res/layout/myworkspace_item_text.xml
+++ b/res/layout/myworkspace_item_text.xml
@@ -11,11 +11,22 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:layout_weight="40"
+        android:textSize="20sp"
         android:background="#00FFAA"
         android:gravity="center" />
 
     <TextView
         android:id="@+id/textview_status_hand"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="10"
+        android:background="#00AAFF"
+        android:gravity="center_vertical"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/textview_status_vetical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -46,6 +57,16 @@
 
     <TextView
         android:id="@+id/textview_status_length"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="10"
+        android:background="#00AAFF"
+        android:gravity="center_vertical"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/textview_status_time"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
